--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <span>Updated:&nbsp;</span>
   <span>{{ site.time | date: site.date_format | default: "%Y-%m-%d" }}</span>
-  <i class="fa-solid fa-heart fa-beat-fade"></i>
+  <!--<i class="fa-solid fa-heart fa-beat-fade"></i>-->
   <span>Powered by:&nbsp;</span>
   <a href="https://github.com/tarrex/online-resume" target="_blank">Online-Resume</a>
 </footer>
